src/grammar/SetGrammarParser.java
// Generated from D:/work/java/Compiler/grammar\SetGrammar.g4 by ANTLR 4.7
package grammar;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SetGrammarParser extends Parser {
    public static final int
            MAIN = 1, OPEN_BRACKET = 2, CLOSE_BRACKET = 3, OPEN_CURLY_BRACKET = 4, CLOSE_CURLY_BRACKET = 5,
            OPEN_SQUARE_BRACKET = 6, CLOSE_SQUARE_BRACKET = 7, INT = 8, ELEMENT = 9, SET = 10,
            PRINT = 11, IF = 12, ELSE = 13, FOR = 14, WHILE = 15, RETURN = 16, FUNCTION = 17, SIZE = 18,
            GET = 19, INDEX_OF = 20, EQULS = 21, DOT = 22, COMMA = 23, PLUS = 24, MINUS = 25, MULTIPLY = 26,
            DIVIDE = 27, NEGATION = 28, EQUAL = 29, NON_EQUAL = 30, LESS = 31, GREATER = 32, SPACE = 33,
            NAME = 34, NUMBER = 35, LINE = 36;
    public static final int
            RULE_setExpression = 0, RULE_program = 1, RULE_block = 2, RULE_declaration = 3,
            RULE_declarationElement = 4, RULE_print = 5, RULE_printSet = 6, RULE_inputSignature = 7,
            RULE_functionCall = 8, RULE_type = 9, RULE_signatureFunction = 10, RULE_functionReturn = 11,
            RULE_functionNonReturn = 12, RULE_blockReturn = 13, RULE_blockNonReturn = 14,
            RULE_equalCompare = 15, RULE_compare = 16, RULE_simpleCompare = 17, RULE_negationCompare = 18,
            RULE_elseBlock = 19, RULE_ifBlock = 20, RULE_whileBlock = 21, RULE_sizeExpression = 22,
            RULE_getExpression = 23, RULE_indexOfExpression = 24, RULE_expression = 25,
            RULE_content = 26;
    public static final String[] ruleNames = {
            "setExpression", "program", "block", "declaration", "declarationElement",
            "print", "printSet", "inputSignature", "functionCall", "type", "signatureFunction",
            "functionReturn", "functionNonReturn", "blockReturn", "blockNonReturn",
            "equalCompare", "compare", "simpleCompare", "negationCompare", "elseBlock",
            "ifBlock", "whileBlock", "sizeExpression", "getExpression", "indexOfExpression",
            "expression", "content"
    };
    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;
    public static final ATN _ATN =
            new ATNDeserializer().deserialize(_serializedATN.toCharArray());
    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    private static final String[] _LITERAL_NAMES = {
            null, "'main'", "'('", "')'", "'{'", "'}'", "'['", "']'", "'int'", "'element'",
            "'set'", "'print'", "'if'", "'else'", "'for'", "'while'", "'return'",
            "'function'", "'size'", "'get'", "'indexOf'", "'='", "'.'", "','", "'+'",
            "'-'", "'*'", "'/'", "'!'", "'=='", "'!='", "'<'", "'>'"
    };
    private static final String[] _SYMBOLIC_NAMES = {
            null, "MAIN", "OPEN_BRACKET", "CLOSE_BRACKET", "OPEN_CURLY_BRACKET", "CLOSE_CURLY_BRACKET",
            "OPEN_SQUARE_BRACKET", "CLOSE_SQUARE_BRACKET", "INT", "ELEMENT", "SET",
            "PRINT", "IF", "ELSE", "FOR", "WHILE", "RETURN", "FUNCTION", "SIZE", "GET",
            "INDEX_OF", "EQULS", "DOT", "COMMA", "PLUS", "MINUS", "MULTIPLY", "DIVIDE",
            "NEGATION", "EQUAL", "NON_EQUAL", "LESS", "GREATER", "SPACE", "NAME",
            "NUMBER", "LINE"
    };
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    static {
        RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION);
    }

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    static {
        _decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
        for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
            _decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
        }
    }

    public SetGrammarParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "SetGrammar.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public final SetExpressionContext setExpression() throws RecognitionException {
        SetExpressionContext _localctx = new SetExpressionContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_setExpression);
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                setState(54);
                match(OPEN_CURLY_BRACKET);
                setState(59);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 0, _ctx);
                while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
                        {
                            {
                                setState(55);
                                match(NAME);
                                setState(56);
                                match(COMMA);
                            }
                        }
                    }
                    setState(61);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 0, _ctx);
                }
                setState(62);
                match(NAME);
                setState(63);
                match(CLOSE_CURLY_BRACKET);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ProgramContext program() throws RecognitionException {
        ProgramContext _localctx = new ProgramContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_program);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(65);
                match(MAIN);
                setState(66);
                block();
                setState(71);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == FUNCTION) {
                    {
                        setState(69);
                        _errHandler.sync(this);
                        switch (getInterpreter().adaptivePredict(_input, 1, _ctx)) {
                            case 1: {
                                setState(67);
                                functionReturn();
                            }
                            break;
                            case 2: {
                                setState(68);
                                functionNonReturn();
                            }
                            break;
                        }
                    }
                    setState(73);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final BlockContext block() throws RecognitionException {
        BlockContext _localctx = new BlockContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_block);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(74);
                match(OPEN_CURLY_BRACKET);
                setState(78);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ELEMENT) | (1L << SET) | (1L << PRINT) | (1L << IF) | (1L << WHILE) | (1L << NAME))) != 0)) {
                    {
                        {
                            setState(75);
                            content();
                        }
                    }
                    setState(80);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(81);
                match(CLOSE_CURLY_BRACKET);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final DeclarationContext declaration() throws RecognitionException {
        DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_declaration);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(84);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == SET) {
                    {
                        setState(83);
                        match(SET);
                    }
                }

                setState(86);
                match(NAME);
                setState(87);
                match(EQULS);
                setState(88);
                expression();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final DeclarationElementContext declarationElement() throws RecognitionException {
        DeclarationElementContext _localctx = new DeclarationElementContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_declarationElement);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(91);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == ELEMENT) {
                    {
                        setState(90);
                        match(ELEMENT);
                    }
                }

                setState(93);
                match(NAME);
                setState(94);
                match(EQULS);
                setState(98);
                _errHandler.sync(this);
                switch (getInterpreter().adaptivePredict(_input, 6, _ctx)) {
                    case 1: {
                        setState(95);
                        match(LINE);
                    }
                    break;
                    case 2: {
                        setState(96);
                        functionCall();
                    }
                    break;
                    case 3: {
                        setState(97);
                        getExpression();
                    }
                    break;
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final PrintContext print() throws RecognitionException {
        PrintContext _localctx = new PrintContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_print);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(100);
                match(PRINT);
                setState(101);
                match(OPEN_BRACKET);
                setState(102);
                match(LINE);
                setState(103);
                match(CLOSE_BRACKET);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final PrintSetContext printSet() throws RecognitionException {
        PrintSetContext _localctx = new PrintSetContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_printSet);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(105);
                match(PRINT);
                setState(106);
                match(OPEN_BRACKET);
                setState(107);
                match(NAME);
                setState(108);
                match(CLOSE_BRACKET);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final InputSignatureContext inputSignature() throws RecognitionException {
        InputSignatureContext _localctx = new InputSignatureContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_inputSignature);
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                setState(110);
                match(OPEN_BRACKET);
                setState(115);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 7, _ctx);
                while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
                        {
                            {
                                setState(111);
                                match(NAME);
                                setState(112);
                                match(COMMA);
                            }
                        }
                    }
                    setState(117);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 7, _ctx);
                }
                setState(118);
                match(NAME);
                setState(119);
                match(CLOSE_BRACKET);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final FunctionCallContext functionCall() throws RecognitionException {
        FunctionCallContext _localctx = new FunctionCallContext(_ctx, getState());
        enterRule(_localctx, 16, RULE_functionCall);
        try {
            enterOuterAlt(_localctx, 1);
            {
                {
                    setState(121);
                    match(NAME);
                    setState(125);
                    _errHandler.sync(this);
                    switch (getInterpreter().adaptivePredict(_input, 8, _ctx)) {
                        case 1: {
                            setState(122);
                            inputSignature();
                        }
                        break;
                        case 2: {
                            {
                                setState(123);
                                match(OPEN_BRACKET);
                                setState(124);
                                match(CLOSE_BRACKET);
                            }
                        }
                        break;
                    }
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final TypeContext type() throws RecognitionException {
        TypeContext _localctx = new TypeContext(_ctx, getState());
        enterRule(_localctx, 18, RULE_type);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(127);
                _la = _input.LA(1);
                if (!(_la == ELEMENT || _la == SET)) {
                    _errHandler.recoverInline(this);
                } else {
                    if (_input.LA(1) == Token.EOF) matchedEOF = true;
                    _errHandler.reportMatch(this);
                    consume();
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final SignatureFunctionContext signatureFunction() throws RecognitionException {
        SignatureFunctionContext _localctx = new SignatureFunctionContext(_ctx, getState());
        enterRule(_localctx, 20, RULE_signatureFunction);
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                setState(129);
                match(OPEN_BRACKET);
                setState(136);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 9, _ctx);
                while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
                        {
                            {
                                setState(130);
                                type();
                                setState(131);
                                match(NAME);
                                setState(132);
                                match(COMMA);
                            }
                        }
                    }
                    setState(138);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 9, _ctx);
                }
                {
                    setState(139);
                    type();
                    setState(140);
                    match(NAME);
                }
                setState(142);
                match(CLOSE_BRACKET);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final FunctionReturnContext functionReturn() throws RecognitionException {
        FunctionReturnContext _localctx = new FunctionReturnContext(_ctx, getState());
        enterRule(_localctx, 22, RULE_functionReturn);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(144);
                match(FUNCTION);
                setState(145);
                type();
                setState(146);
                match(NAME);
                setState(150);
                _errHandler.sync(this);
                switch (getInterpreter().adaptivePredict(_input, 10, _ctx)) {
                    case 1: {
                        setState(147);
                        signatureFunction();
                    }
                    break;
                    case 2: {
                        {
                            setState(148);
                            match(OPEN_BRACKET);
                            setState(149);
                            match(CLOSE_BRACKET);
                        }
                    }
                    break;
                }
                setState(152);
                blockReturn();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final FunctionNonReturnContext functionNonReturn() throws RecognitionException {
        FunctionNonReturnContext _localctx = new FunctionNonReturnContext(_ctx, getState());
        enterRule(_localctx, 24, RULE_functionNonReturn);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(154);
                match(FUNCTION);
                setState(155);
                match(NAME);
                setState(159);
                _errHandler.sync(this);
                switch (getInterpreter().adaptivePredict(_input, 11, _ctx)) {
                    case 1: {
                        setState(156);
                        signatureFunction();
                    }
                    break;
                    case 2: {
                        {
                            setState(157);
                            match(OPEN_BRACKET);
                            setState(158);
                            match(CLOSE_BRACKET);
                        }
                    }
                    break;
                }
                setState(161);
                blockNonReturn();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final BlockReturnContext blockReturn() throws RecognitionException {
        BlockReturnContext _localctx = new BlockReturnContext(_ctx, getState());
        enterRule(_localctx, 26, RULE_blockReturn);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(163);
                match(OPEN_CURLY_BRACKET);
                setState(167);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ELEMENT) | (1L << SET) | (1L << PRINT) | (1L << IF) | (1L << WHILE) | (1L << NAME))) != 0)) {
                    {
                        {
                            setState(164);
                            content();
                        }
                    }
                    setState(169);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(170);
                match(RETURN);
                setState(171);
                match(NAME);
                setState(172);
                match(CLOSE_CURLY_BRACKET);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final BlockNonReturnContext blockNonReturn() throws RecognitionException {
        BlockNonReturnContext _localctx = new BlockNonReturnContext(_ctx, getState());
        enterRule(_localctx, 28, RULE_blockNonReturn);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(174);
                match(OPEN_CURLY_BRACKET);
                setState(178);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ELEMENT) | (1L << SET) | (1L << PRINT) | (1L << IF) | (1L << WHILE) | (1L << NAME))) != 0)) {
                    {
                        {
                            setState(175);
                            content();
                        }
                    }
                    setState(180);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(181);
                match(RETURN);
                setState(182);
                match(CLOSE_CURLY_BRACKET);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final EqualCompareContext equalCompare() throws RecognitionException {
        EqualCompareContext _localctx = new EqualCompareContext(_ctx, getState());
        enterRule(_localctx, 30, RULE_equalCompare);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                {
                    setState(184);
                    expression();
                }
                setState(185);
                _la = _input.LA(1);
                if (!(_la == EQUAL || _la == NON_EQUAL)) {
                    _errHandler.recoverInline(this);
                } else {
                    if (_input.LA(1) == Token.EOF) matchedEOF = true;
                    _errHandler.reportMatch(this);
                    consume();
                }
                {
                    setState(186);
                    expression();
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final CompareContext compare() throws RecognitionException {
        CompareContext _localctx = new CompareContext(_ctx, getState());
        enterRule(_localctx, 32, RULE_compare);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                {
                    setState(188);
                    sizeExpression();
                }
                setState(189);
                _la = _input.LA(1);
                if (!((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << EQUAL) | (1L << NON_EQUAL) | (1L << LESS) | (1L << GREATER))) != 0))) {
                    _errHandler.recoverInline(this);
                } else {
                    if (_input.LA(1) == Token.EOF) matchedEOF = true;
                    _errHandler.reportMatch(this);
                    consume();
                }
                {
                    setState(190);
                    sizeExpression();
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final SimpleCompareContext simpleCompare() throws RecognitionException {
        SimpleCompareContext _localctx = new SimpleCompareContext(_ctx, getState());
        enterRule(_localctx, 34, RULE_simpleCompare);
        try {
            setState(195);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 14, _ctx)) {
                case 1:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(192);
                    equalCompare();
                }
                break;
                case 2:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(193);
                    compare();
                }
                break;
                case 3:
                    enterOuterAlt(_localctx, 3);
                {
                    setState(194);
                    indexOfExpression();
                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final NegationCompareContext negationCompare() throws RecognitionException {
        NegationCompareContext _localctx = new NegationCompareContext(_ctx, getState());
        enterRule(_localctx, 36, RULE_negationCompare);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(197);
                match(NEGATION);
                setState(198);
                match(OPEN_BRACKET);
                setState(199);
                simpleCompare();
                setState(200);
                match(CLOSE_BRACKET);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ElseBlockContext elseBlock() throws RecognitionException {
        ElseBlockContext _localctx = new ElseBlockContext(_ctx, getState());
        enterRule(_localctx, 38, RULE_elseBlock);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(202);
                match(ELSE);
                setState(203);
                block();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final IfBlockContext ifBlock() throws RecognitionException {
        IfBlockContext _localctx = new IfBlockContext(_ctx, getState());
        enterRule(_localctx, 40, RULE_ifBlock);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(205);
                match(IF);
                setState(206);
                match(OPEN_BRACKET);
                setState(209);
                _errHandler.sync(this);
                switch (_input.LA(1)) {
                    case OPEN_CURLY_BRACKET:
                    case NAME: {
                        setState(207);
                        simpleCompare();
                    }
                    break;
                    case NEGATION: {
                        setState(208);
                        negationCompare();
                    }
                    break;
                    default:
                        throw new NoViableAltException(this);
                }
                setState(211);
                match(CLOSE_BRACKET);
                setState(212);
                block();
                setState(214);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == ELSE) {
                    {
                        setState(213);
                        elseBlock();
                    }
                }

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final WhileBlockContext whileBlock() throws RecognitionException {
        WhileBlockContext _localctx = new WhileBlockContext(_ctx, getState());
        enterRule(_localctx, 42, RULE_whileBlock);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(216);
                match(WHILE);
                setState(217);
                match(OPEN_BRACKET);
                setState(220);
                _errHandler.sync(this);
                switch (_input.LA(1)) {
                    case OPEN_CURLY_BRACKET:
                    case NAME: {
                        setState(218);
                        simpleCompare();
                    }
                    break;
                    case NEGATION: {
                        setState(219);
                        negationCompare();
                    }
                    break;
                    default:
                        throw new NoViableAltException(this);
                }
                setState(222);
                match(CLOSE_BRACKET);
                setState(223);
                block();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final SizeExpressionContext sizeExpression() throws RecognitionException {
        SizeExpressionContext _localctx = new SizeExpressionContext(_ctx, getState());
        enterRule(_localctx, 44, RULE_sizeExpression);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(225);
                match(NAME);
                setState(226);
                match(DOT);
                setState(227);
                match(SIZE);
                setState(228);
                match(OPEN_BRACKET);
                setState(229);
                match(CLOSE_BRACKET);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final GetExpressionContext getExpression() throws RecognitionException {
        GetExpressionContext _localctx = new GetExpressionContext(_ctx, getState());
        enterRule(_localctx, 46, RULE_getExpression);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(231);
                match(NAME);
                setState(232);
                match(DOT);
                setState(233);
                match(GET);
                setState(234);
                match(OPEN_BRACKET);
                setState(235);
                match(NUMBER);
                setState(236);
                match(CLOSE_BRACKET);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final IndexOfExpressionContext indexOfExpression() throws RecognitionException {
        IndexOfExpressionContext _localctx = new IndexOfExpressionContext(_ctx, getState());
        enterRule(_localctx, 48, RULE_indexOfExpression);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(238);
                match(NAME);
                setState(239);
                match(DOT);
                setState(240);
                match(INDEX_OF);
                setState(241);
                match(OPEN_BRACKET);
                setState(242);
                match(NAME);
                setState(243);
                match(CLOSE_BRACKET);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }
